<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jbpm.services.poc</groupId>
    <artifactId>rest-jms-poc</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>

  <artifactId>test-impl</artifactId>
  <packaging>war</packaging>
  <name>jBPM Services PoC :: Test Impl</name>
  <description>In order to figure out how to get a war with jbpm-services working</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <arquillian.version>1.0.3.Final</arquillian.version>
  </properties>

  <dependencies>
    <!-- TEST -->
    <dependency>
      <groupId>org.jbpm.services.poc</groupId>
      <artifactId>other-impl</artifactId>
      <version>${project.version}</version>
      <type>war</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- arquillian -->
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/webapp</directory>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1.1</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Bundle-Name>jBPM Console Services PoC</Bundle-Name>
              <Bundle-Version>${project.version}</Bundle-Version>
              <Bundle-SymbolicName>console-services</Bundle-SymbolicName>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

      <!-- testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.2</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*IntegrationTest.java</exclude>
          </excludes>
          <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.12</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <systemProperties>
            <property>
              <name>arquillian.launch</name>
              <value>${arquillian.launch}</value>
            </property>
            <property>
              <name>java.naming.factory.initial</name>
              <name>${initial.context.factory}</name>
            </property>
          </systemProperties>
          <includes>
            <include>**/*IntegrationTest.java</include>
          </includes>
          <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <profiles>

    <!-- testing with glassfish -->
    <profile>
      <id>arquillian-glassfish-embedded</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <arquillian.launch>glassfish-embedded</arquillian.launch>
        <initial.context.factory>com.sun.enterprise.naming.SerialInitContextFactory</initial.context.factory>
        <context.provider.url>iiop://localhost:3700</context.provider.url>
      </properties>
      <build>
        <testResources>
          <testResource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
          </testResource>
          <testResource>
            <directory>src/test/resources-glassfish</directory>
            <filtering>false</filtering>
          </testResource>
        </testResources>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.7</version>
            <executions>
              <execution>
                <id>copy-other-impl-war</id>
                <phase>process-resources</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.jbpm.services.poc</groupId>
                  <artifactId>other-impl</artifactId>
                  <version>${project.version}</version>
                  <type>war</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.jboss.arquillian.container</groupId>
          <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
          <version>1.0.0.CR3</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.glassfish.main.extras</groupId>
          <artifactId>glassfish-embedded-all</artifactId>
          <version>3.1.2</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.5.8</version>
        </dependency>
      </dependencies>
    </profile>

  </profiles>
</project>

